minor: display formatting

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
     background-color: orange;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     flex-wrap: wrap;
     text-align: end;
 }
