--- a/style.css
+++ b/style.css
@@ -1,19 +1,31 @@
 *{
-    /* border: 1px red solid; */
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-
+body{
+    overflow: hidden;
+    background: rgb(34, 32, 32);
+}
+canvas{
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
 .calculator{
-    margin: auto;
+    margin: 100px auto;
     min-width: 300px;
     max-width: 400px;
-    background-color: black;
+    background-color: rgba(30, 27, 27, 0.522);
     padding: 20px 0 20px;
 }
 .calculator__display{
     margin: 30px auto;
     width: 90%;
     min-height: 120px;
-    background-color: orange;
+    background-color: rgba(176, 116, 5, 0.856);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -51,12 +63,12 @@
     border-radius: 50px;
 }
 .special{
-    background-color: lightgray ;
+    background-color: rgba(179, 176, 176, 0.596) ;
     color: black;
 }
 .operator{
-    background-color: orange;
+    background-color: rgba(255, 166, 0, 0.549);
 }
 .number{
-    background-color: gray;
+    background-color: rgba(81, 81, 81, 0.578);
 }
