--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 body{
     overflow: hidden;
-    background: rgb(34, 32, 32);
+    background: rgb(2, 2, 2);
 }
 canvas{
     overflow: hidden;
@@ -18,14 +18,32 @@ canvas{
     margin: 100px auto;
     min-width: 300px;
     max-width: 400px;
-    background-color: rgba(30, 27, 27, 0.522);
+    background-color: rgba(0, 0, 0, 0.786);
     padding: 20px 0 20px;
+    border-radius: 10px;
+}
+.calculator__header{
+    display: flex;
+    height: 50px;
+}
+.logo{
+    height: 100%;
+}
+.social-icons{
+    font-size: 25px;
+    margin-right: 10px;
+    margin-left: auto;
+    align-self: center;
+    color: orange;
+}
+.social-icons a:visited{
+    color: orange;
 }
 .calculator__display{
     margin: 30px auto;
     width: 90%;
     min-height: 120px;
-    background-color: rgba(176, 116, 5, 0.856);
+    background-color: rgba(176, 116, 5, 0.744);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -71,4 +89,11 @@ canvas{
 }
 .number{
     background-color: rgba(81, 81, 81, 0.578);
+}
+.calculator__footer{
+    color: orange;
+    text-align: center;
+}
+.calculator__footer p:last-of-type{
+    font-size: smaller;
 }
