--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
     box-sizing: border-box;
 }
 body{
-    overflow: hidden;
-    background: rgb(2, 2, 2);
+    /* overflow: hidden; */
+    background: rgb(0, 0, 0);
 }
 canvas{
     overflow: hidden;
@@ -16,7 +16,8 @@ canvas{
 }
 .calculator{
     margin: 100px auto;
-    min-width: 300px;
+    width: 90%;
+    min-width: 250px;
     max-width: 400px;
     background-color: rgba(25, 25, 25, 0.7);
     padding: 20px 0 20px;
@@ -34,6 +35,8 @@ canvas{
     margin-right: 10px;
     margin-left: auto;
     align-self: center;
+}
+.social-icons a{
     color: orange;
 }
 .social-icons a:visited{
@@ -42,7 +45,7 @@ canvas{
 .calculator__display{
     margin: 30px auto;
     width: 90%;
-    min-height: 120px;
+    min-height: 100px;
     background-color: rgba(176, 116, 5, 0.744);
     display: flex;
     flex-direction: column;
@@ -59,7 +62,7 @@ canvas{
     font-size: 2.5rem;
 }
 .calculator__buttons-container{
-    gap: 3px;
+    gap: 0px;
     margin: 0 auto 15px;
     width: 80%;
     display: grid;
@@ -67,13 +70,14 @@ canvas{
     grid-template-rows: repeat(6, 1fr)
 }
 .button{
-    height: 70px;
+    height: 80%;
     aspect-ratio: 1;
     border-radius: 50%;
     font-weight: bolder;
     font-size: x-large;
     color: white;
     text-align: center;
+    border: unset;
 }
 .doubled{
     grid-column: span 2;
