--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ canvas{
     cursor: pointer;
     font-size: 25px;
     margin-left: auto;
+    margin-right: 20px;
     color: orange;
     align-self: center;
 }
