--- a/style.css
+++ b/style.css
@@ -24,10 +24,10 @@ canvas{
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 50px;
+    gap: 0px 50px;
 }
 .calculator{
-    margin-top: 100px;
+    margin-bottom: 50px;
     width: 90%;
     min-width: 250px;
     max-width: 350px;
@@ -137,6 +137,7 @@ a:last-of-type{
 }
 
 .magic-button{
+    margin-bottom: 50px;
     cursor: pointer;
     font: inherit;
     min-width: 200px;
