--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ canvas{
 }
 
 .calculator-container{
+    width: 70%;
+    margin: auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
